# My_Blog

./: README.md
Django_Blog/: pyproject.toml
Django_Blog/blog_project/: db.sqlite3
Django_Blog/blog_project/blog/: tests.py
Django_Blog/blog_project/blog/migrations/: 0001_initial.py
Django_Blog/blog_project/blog_project/: settings.py
