[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Progrok <Dist812@yandex.ru>"]
readme = "README.md"
packages = [{include = "django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
